# facial_recognition_demo

./: .env  .gitignore  .secret_env  README.md  pyproject.toml
src/: __init__.py  __main__.py  errors.py  facial_detection.py  location.py  video_capture.py
tests/: test_location.py
