[tool.poetry]
name = "facial_recognition_demo"
version = "0.1.0"
description = "Facial recognition demo for 5.PK."
authors = ["0scarB <oscarb@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.16.2"
opencv-python = "^4.1.2"
face_recognition = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
